feat: updated content

--- a/content/index.html
+++ b/content/index.html
@@ -2,10 +2,28 @@
 layout: layout.html
 ---
 
-<h2>Front-end coding</h2>
+<h1>Front-end coding</h1>
+<h2 class="cz-heading-1-sub">Interactieve, gebruiksvriendelijke (web)applicaties.</h2>
 
-<p>De focus van IT verlegt zich naar front-end development van geavanceerde, interactive, en gebruiksvriendelijke (web)applicaties.</p>
-<p>De professionals van CODEZILLA zorgen voor gestructureerd geschreven (front end) software, opdate in de toekomst andere professionals snel en adequaat kunnen verder ontwikkelen van deze software.</p>
+<h2>Onze visie</h2>
+<p>
+    De focus van software-ontwikkeling verlegt zich meer naar front end development van geavanceerde, interactieve, en gebruiksvriendelijke (web)applicaties. Back end blijft belangrijk.
+    <a href="/visie">Lees meer over onze visie</a>
+</p>
+
+
+<h2>Met onze klanten</h2>
+<p>
+    Wij bouwen samen met onze klanten complexe (mobiele) webapplicaties op maat met optimale gebruikersvriendelijkheid. We helpen processen van onze klanten te verbeteren, interactie met haar stakeholders eenvoudig en intuïtief te laten verlopen en/of informatie adequaat te verwerken.
+    <a href="/klanten">Lees meer over onze klantbenadering</a>
+</p>
+
+<h2>Als professionals</h2>
+<p>
+    De professionals van CODEZILLA zorgen voor gestructureerd geschreven (front end) software, opdat in de toekomst andere professionals snel en adequaat kunnen verder ontwikkelen van deze software.
+    <a href="/team">Lees meer over ons</a>
+</p>
+
 
 <blockquote>"Wij zijn monsterachtig goed in code"</blockquote>
 
@@ -21,3 +39,17 @@ layout: layout.html
 
 {{> contact }}
 
+
+
+
+## Wij schrijven monsterlijk goede code voor...
+
+{image}
+
+Wij bouwen samen met onze klanten complexe (mobiele) webapplicaties op maat met optimale gebruiksvriendelijkheid. We helpen processen van onze klanten te verbeteren, interactie met haar stakeholders eenvoudig en intuïtief te laten verlopen en/of informatie adequaat te verwerken.
+
+## Koffie?
+Klinkt wat we doen en hoe we werken aantrekkelijk en interessant? Voor een kop koffie of lunch maken we altijd tijd.
+
+### Bel of mail ons
+[020 - 3120458](tel:+31203120458)
