Added HTML structure for footer

--- a/content/index.html
+++ b/content/index.html
@@ -1,5 +1,10 @@
 ---
+title: CODEZILLA
 layout: layout.html
+
+nextPage:
+    title: ons team
+    url: /team
 ---
 
 <h1>Front-end coding</h1>
@@ -39,17 +44,5 @@ layout: layout.html
 
 {{> contact }}
 
+{{> footer nextPage = nextPage}}
 
-
-
-## Wij schrijven monsterlijk goede code voor...
-
-{image}
-
-Wij bouwen samen met onze klanten complexe (mobiele) webapplicaties op maat met optimale gebruiksvriendelijkheid. We helpen processen van onze klanten te verbeteren, interactie met haar stakeholders eenvoudig en intuïtief te laten verlopen en/of informatie adequaat te verwerken.
-
-## Koffie?
-Klinkt wat we doen en hoe we werken aantrekkelijk en interessant? Voor een kop koffie of lunch maken we altijd tijd.
-
-### Bel of mail ons
-[020 - 3120458](tel:+31203120458)
