--- a/content/index.html
+++ b/content/index.html
@@ -10,31 +10,43 @@ nextPage:
 <h1>Front-end coding</h1>
 <h2 class="cz-heading-1-sub">Interactieve, gebruiksvriendelijke (web)applicaties.</h2>
 
-<h2>Onze visie</h2>
-<p class="cz-text">
-    De focus van software-ontwikkeling verlegt zich meer naar front end development van geavanceerde, interactieve, en gebruiksvriendelijke (web)applicaties. Back end blijft belangrijk.
-    <a href="/visie">Lees meer over onze visie</a>
-</p>
+<section class="cz-section">
+    <div class="container">
+        <h2>Onze visie</h2>
+        <p class="cz-text">
+            De focus van software-ontwikkeling verlegt zich meer naar front end development van geavanceerde, interactieve, en gebruiksvriendelijke (web)applicaties. Back end blijft belangrijk.
+            <a href="/visie">Lees meer over onze visie</a>
+        </p>
+    </div>
+</section>
 
+<section class="cz-section">
+    <div class="container">
+        <h2>Met onze klanten</h2>
+        <p class="cz-text">
+            Wij bouwen samen met onze klanten complexe (mobiele) webapplicaties op maat met optimale gebruikersvriendelijkheid. We helpen processen van onze klanten te verbeteren, interactie met haar stakeholders eenvoudig en intuïtief te laten verlopen en/of informatie adequaat te verwerken.
+            <a href="/klanten">Lees meer over onze klantbenadering</a>
+        </p>
+    </div>
+</section>
 
-<h2>Met onze klanten</h2>
-<p class="cz-text">
-    Wij bouwen samen met onze klanten complexe (mobiele) webapplicaties op maat met optimale gebruikersvriendelijkheid. We helpen processen van onze klanten te verbeteren, interactie met haar stakeholders eenvoudig en intuïtief te laten verlopen en/of informatie adequaat te verwerken.
-    <a href="/klanten">Lees meer over onze klantbenadering</a>
-</p>
+<section class="cz-section">
+    <div class="container">
+        <h2>Als professionals</h2>
+        <p class="cz-text">
+            De professionals van CODEZILLA zorgen voor gestructureerd geschreven (front end) software, opdat in de toekomst andere professionals snel en adequaat kunnen verder ontwikkelen van deze software.
+            <a href="/team">Lees meer over ons</a>
+        </p>
+    </div>
+</section>
 
-<h2>Als professionals</h2>
-<p class="cz-text">
-    De professionals van CODEZILLA zorgen voor gestructureerd geschreven (front end) software, opdat in de toekomst andere professionals snel en adequaat kunnen verder ontwikkelen van deze software.
-    <a href="/team">Lees meer over ons</a>
-</p>
-
-
-<blockquote>"Wij zijn monsterachtig goed in code"</blockquote>
-
-<p class="cz-text">Wij bouwen samen met onze klanten complexe (mobiele) webapplicaties op maat met optimale gebruiksvriendelijkheid. We helpen processen van onze klanten te verbeteren, interactie met haar stakeholders eenvoudig en intuïtief te laten verlopen en/of informatie adequaat te verwerken.</p>
-
-<p class="cz-text"><a href="/visie">Lees meer over onze visie</a></p>
+<section class="cz-section">
+    <div class="container">
+        <blockquote>"Wij zijn monsterachtig goed in code"</blockquote>
+        <p class="cz-text">Wij bouwen samen met onze klanten complexe (mobiele) webapplicaties op maat met optimale gebruiksvriendelijkheid. We helpen processen van onze klanten te verbeteren, interactie met haar stakeholders eenvoudig en intuïtief te laten verlopen en/of informatie adequaat te verwerken.</p>
+        <p class="cz-text"><a href="/visie">Lees meer over onze visie</a></p>
+    </div>
+</section>
 
 <section class="cz-section-inverse">
     <div class="container">
