--- a/content/index.html
+++ b/content/index.html
@@ -1,66 +1,11 @@
 ---
-title: CODEZILLA
+title: My Hackathon template
 layout: layout.html
-
-nextPage:
-    title: ons team
-    url: /team
 ---
 
-<h1>Front-end coding</h1>
-<h2 class="cz-heading-1-sub">Interactieve, gebruiksvriendelijke (web)applicaties.</h2>
+<div class="container">
+    <h1>{{title}}</h1>
 
-<section class="cz-section">
-    <div class="container">
-        <h2>Onze visie</h2>
-        <p class="cz-text">
-            De focus van software-ontwikkeling verlegt zich meer naar front end development van geavanceerde, interactieve, en gebruiksvriendelijke (web)applicaties. Back end blijft belangrijk.
-            <a href="/visie">Lees meer over onze visie</a>
-        </p>
-    </div>
-</section>
-
-<section class="cz-section">
-    <div class="container">
-        <h2>Met onze klanten</h2>
-        <p class="cz-text">
-            Wij bouwen samen met onze klanten complexe (mobiele) webapplicaties op maat met optimale gebruikersvriendelijkheid. We helpen processen van onze klanten te verbeteren, interactie met haar stakeholders eenvoudig en intuïtief te laten verlopen en/of informatie adequaat te verwerken.
-            <a href="/klanten">Lees meer over onze klantbenadering</a>
-        </p>
-    </div>
-</section>
-
-<section class="cz-section">
-    <div class="container">
-        <h2>Als professionals</h2>
-        <p class="cz-text">
-            De professionals van CODEZILLA zorgen voor gestructureerd geschreven (front end) software, opdat in de toekomst andere professionals snel en adequaat kunnen verder ontwikkelen van deze software.
-            <a href="/team">Lees meer over ons</a>
-        </p>
-    </div>
-</section>
-
-<section class="cz-section">
-    <div class="container">
-        <blockquote>"Wij zijn monsterachtig goed in code"</blockquote>
-        <p class="cz-text">Wij bouwen samen met onze klanten complexe (mobiele) webapplicaties op maat met optimale gebruiksvriendelijkheid. We helpen processen van onze klanten te verbeteren, interactie met haar stakeholders eenvoudig en intuïtief te laten verlopen en/of informatie adequaat te verwerken.</p>
-        <p class="cz-text"><a href="/visie">Lees meer over onze visie</a></p>
-    </div>
-</section>
-
-<section class="cz-section-inverse">
-    <div class="container">
-        <h2 class="heading-inverse">Koffie?</h2>
-        <p class="cz-text-inverse">Klinkt wat we doen en hoe we werken aantrekkelijk en interessant? Voor een kop koffie of lunch maken we altijd tijd.</p>
-
-        <p class="cz-text-inverse">** Bel of mail ons **<br>
-            <a href="tel:+31203120458">020 - 3120458</a>
-        </p>
-    </div>
-</section>
-
-{{> contact }}
-
-
-{{> footer nextPage = nextPage}}
+    {{> hackathon-template }}
+</div>
 
