media block beginnings

--- a/content/index.html
+++ b/content/index.html
@@ -12,13 +12,21 @@ nextPage:
 
 <section class="cz-section">
     <div class="container">
-        <h2>Onze visie</h2>
-        <p class="cz-text">
-            De focus van software-ontwikkeling verlegt zich meer naar front end development van geavanceerde, interactieve, en gebruiksvriendelijke (web)applicaties. Back end blijft belangrijk.
-            <a href="/visie">Lees meer over onze visie</a>
-        </p>
+        <div class="media-block">
+            <div class="media-block__image">
+                <img src="http://placehold.it/200x200" />
+            </div>
+            <div class="media-block__content">
+                <h2>Onze visie</h2>
+                <p class="cz-text">
+                    De focus van software-ontwikkeling verlegt zich meer naar front end development van geavanceerde, interactieve, en gebruiksvriendelijke (web)applicaties. Back end blijft belangrijk.
+                    <a href="/visie">Lees meer over onze visie</a>
+                </p>
+            </div>
+        </div>
     </div>
 </section>
+
 
 <section class="cz-section">
     <div class="container">
