--- a/content/index.html
+++ b/content/index.html
@@ -4,7 +4,7 @@ layout: layout.html
 ---
 
 <div class="container">
-    <h1>{{title}}</h1>
+    <!-- <h1>{{title}}</h1> -->
 
     {{> hackathon-template }}
 </div>
