feat: cherry-picked Triangles into development

--- a/content/index.html
+++ b/content/index.html
@@ -7,7 +7,7 @@ nextPage:
     url: /team
 ---
 
-<h1>Front-end coding</h1>
+<h1>{{title}}</h1>
 <h2 class="cz-heading-1-sub">Interactieve, gebruiksvriendelijke (web)applicaties.</h2>
 
 <section class="cz-section">
@@ -29,6 +29,7 @@ nextPage:
         </p>
     </div>
 </section>
+<div class="container">
 
 <section class="cz-section">
     <div class="container">
@@ -46,4 +47,15 @@ nextPage:
         <p class="cz-text">Wij bouwen samen met onze klanten complexe (mobiele) webapplicaties op maat met optimale gebruiksvriendelijkheid. We helpen processen van onze klanten te verbeteren, interactie met haar stakeholders eenvoudig en intuïtief te laten verlopen en/of informatie adequaat te verwerken.</p>
         <p class="cz-text"><a href="/visie">Lees meer over onze visie</a></p>
     </div>
+</section>
+
+<!--tmp Triangles include-->
+<section style="width: 100%; height: 400px;">
+    <article style="width: 100%; height: 100%;">
+        <canvas id="triangles" width="0" height="0"></canvas>
+    </article>
+</section>
+
+<section style="height: 10000px;">
+    lalala
 </section>
