cleanup, test stuff
- should pass the h1 test now :roller_coaster:
- some more cleanup

--- a/content/index.html
+++ b/content/index.html
@@ -1,10 +1,10 @@
 ---
-title: My Hackathon template
+title: Modern background - Triangle
 layout: layout.html
 ---
 
 <div class="container">
-    <!-- <h1>{{title}}</h1> -->
+    <h1>{{title}}</h1>
 
     {{> hackathon-template }}
 </div>
