Changes according to comments

--- a/content/index.html
+++ b/content/index.html
@@ -19,7 +19,7 @@ nextPage:
 
             <div class="media-block__content">
                 <h2>Onze visie</h2>
-                <div class="cz-divider"></div>
+                <hr class="cz-divider"></hr>
                 <p class="cz-text">
                     De focus van software-ontwikkeling verlegt zich meer naar front end development van geavanceerde, interactieve, en gebruiksvriendelijke (web)applicaties. Back end blijft belangrijk.
                     <br/><br/>
@@ -36,7 +36,7 @@ nextPage:
         <div class="media-block">
             <div class="media-block__content">
                 <h2>Met onze klanten</h2>
-                <div class="cz-divider"></div>
+                <hr class="cz-divider"></hr>
                 <p class="cz-text">
                     Wij bouwen samen met onze klanten complexe (mobiele) webapplicaties op maat met optimale gebruikersvriendelijkheid. We helpen processen van onze klanten te verbeteren, interactie met haar stakeholders eenvoudig en intuïtief te laten verlopen en/of informatie adequaat te verwerken.
                     <br/><br/>
@@ -59,7 +59,7 @@ nextPage:
             </div>
             <div class="media-block__content">
                 <h2>Als professionals</h2>
-                <div class="cz-divider"></div>
+                <hr class="cz-divider"></hr>
                 <p class="cz-text">
                     De professionals van CODEZILLA zorgen voor gestructureerd geschreven (front end) software, opdat in de toekomst andere professionals snel en adequaat kunnen verder ontwikkelen van deze software.
                     <br/><br/>
