--- a/content/team.html
+++ b/content/team.html
@@ -7,4 +7,62 @@ nextPage:
     url: /visie
 ---
 
-{{> team-members}}
+<div class="cz-split-panels">
+    <div class="cz-section">
+        <div class="cz-diamond-grid">
+            <div class="cz-diamond-grid__inner">
+                <div class="cz-diamond-grid__block">
+                    {{> team-member name="remy" svg="/images/monsters/remymonster.svg" }}
+                </div>
+                <div class="cz-diamond-grid__block">
+                    {{> team-member name="jelle" svg="/images/monsters/jellemonster.svg" }}
+                </div>
+                <div class="cz-diamond-grid__block">
+                    {{> team-member name="nico" svg="/images/monsters/nicomonster.svg" }}
+                </div>
+                <div class="cz-diamond-grid__block">
+                    {{> team-member name="patrick" svg="/images/monsters/patrickmonster.svg" }}
+                </div>
+                <div class="cz-diamond-grid__block">
+                    {{> team-member name="rome" svg="/images/monsters/romemonster.svg" }}
+                </div>
+                <div class="cz-diamond-grid__block">
+                    {{> team-member name="arno" svg="/images/monsters/arnomonster.svg" }}
+                </div>
+                <div class="cz-diamond-grid__block">
+                    {{> team-member name="ming" svg="/images/monsters/mingmonster.svg" }}
+                </div>
+                <div class="cz-diamond-grid__block">
+                    {{> team-member name="tjin" svg="/images/monsters/tjinmonster.svg" }}
+                </div>
+                <div class="cz-diamond-grid__block">
+                    <div cz-diamond="" class="cz-diamond cz-diamond--spacer"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    {{#> team-member-overlay name="remy" displayName="Remy" quote="Hmm, that framework sounds delicious" svg="/images/monsters/remymonster.svg"}}
+        {{#*inline "likes"}}
+            Devouring websites and travel
+        {{/inline}}
+        {{#*inline "writesCodeFor"}}
+            <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
+        {{/inline}}
+    {{/team-member-overlay}}
+    {{#> team-member-overlay name="jelle" displayName="Jelle" quote="Talk is cheap. Show me the code." svg="/images/monsters/jellemonster.svg"}}
+        {{#*inline "likes"}}
+            Open Source Software, Retro Games, Speed Skating, Snowboarding
+        {{/inline}}
+        {{#*inline "writesCodeFor"}}
+        <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
+        {{/inline}}
+    {{/team-member-overlay}}
+    {{#> team-member-overlay name="nico" displayName="Nico" quote="Simplicity is the ultimate sophistication" svg="/images/monsters/nicomonster.svg"}}
+        {{#*inline "likes"}}
+            Voetbal, fitness, muziek en awesome user experiences
+        {{/inline}}
+        {{#*inline "writesCodeFor"}}
+            <p> Rabobank, bij de Rabobank werkt Nico mee in de SCRUM-teams aan Angular en React applicaties. Daarnaast fungeert hij ook als UX-designer.</p>
+        {{/inline}}
+    {{/team-member-overlay}}
+</div>
