--- a/content/team.html
+++ b/content/team.html
@@ -2,6 +2,11 @@
 title: Ons team
 layout: layout.html
 
+header:
+    image: http://lorempixel.com/1200/1920/technics/4
+    title: It's never our fault if it's crooked
+    slogan: Always code as if the guy <br /> who ends up maintaining your code <br /> will be a violent psychopath who knows where you live.
+
 nextPage:
     title: onze visie
     url: /visie
