team pagina progress

--- a/content/team.html
+++ b/content/team.html
@@ -66,4 +66,44 @@ nextPage:
             <p> Rabobank, bij de Rabobank werkt Nico mee in de SCRUM-teams aan Angular en React applicaties. Daarnaast fungeert hij ook als UX-designer.</p>
         {{/inline}}
     {{/team-member-overlay}}
+    {{#> team-member-overlay name="patrick" displayName="Patrick" quote="Crappy code smells like shit" svg="/images/monsters/patrickmonster.svg"}}
+        {{#*inline "likes"}}
+        Gamen gek
+        {{/inline}}
+        {{#*inline "writesCodeFor"}}
+    <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
+        {{/inline}}
+    {{/team-member-overlay}}
+    {{#> team-member-overlay name="rome" displayName="Rome" quote="Problems are only opportunities in work clothes" svg="/images/monsters/romemonster.svg"}}
+        {{#*inline "likes"}}
+            Sports, reading, cooking, eating and travelling the world
+        {{/inline}}
+        {{#*inline "writesCodeFor"}}
+        <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
+        {{/inline}}
+    {{/team-member-overlay}}
+    {{#> team-member-overlay name="arno" displayName="Arno" quote="I don't do quotes" svg="/images/monsters/arnomonster.svg"}}
+    {{#*inline "likes"}}
+    Games, series & movies, cooking and coding
+    {{/inline}}
+    {{#*inline "writesCodeFor"}}
+    <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
+    {{/inline}}
+    {{/team-member-overlay}}
+    {{#> team-member-overlay name="ming" displayName="Ming" quote="Please insert quote" svg="/images/monsters/mingmonster.svg"}}
+    {{#*inline "likes"}}
+    Various things
+    {{/inline}}
+    {{#*inline "writesCodeFor"}}
+    <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
+    {{/inline}}
+    {{/team-member-overlay}}
+    {{#> team-member-overlay name="tjin" displayName="Tjin" quote="Please insert quote" svg="/images/monsters/tjinmonster.svg"}}
+    {{#*inline "likes"}}
+    Various things
+    {{/inline}}
+    {{#*inline "writesCodeFor"}}
+    <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
+    {{/inline}}
+    {{/team-member-overlay}}
 </div>
