Add the header variables to projecten page

--- a/content/projecten.html
+++ b/content/projecten.html
@@ -1,6 +1,15 @@
 ---
 title: Projecten
 layout: layout.html
+
+header:
+    image: http://lorempixel.com/1200/1920/technics/3
+    title: Hacking is wrong
+    slogan: Always code as if the guy <br /> who ends up maintaining your code <br /> will be a violent psychopath who knows where you live.
+
+nextPage:
+    title: onze visie
+    url: /visie
 ---
 
 Foo Bar Baz
