--- a/content/index.html
+++ b/content/index.html
@@ -6,7 +6,7 @@ nextPage:
     title: ons team
     url: /team
 ---
-
+<main class="main-body">
 <section class="cz-section">
     <div class="container">
         <div class="media-block">
@@ -15,7 +15,7 @@ nextPage:
             </div>
 
             <div class="media-block__content">
-                <h2>Onze visie</h2>
+                <h2 class="cz-no-m-b">Onze visie</h2>
                 <hr class="cz-divider" />
                 <p class="cz-text">
                     De focus van software-ontwikkeling verlegt zich meer naar front end development van geavanceerde, interactieve, en gebruiksvriendelijke (web)applicaties. Back end blijft belangrijk.
@@ -31,7 +31,7 @@ nextPage:
     <div class="container">
         <div class="media-block">
             <div class="media-block__content">
-                <h2>Met onze klanten</h2>
+                <h2 class="cz-no-m-b">Met onze klanten</h2>
                 <hr class="cz-divider"></hr>
                 <p class="cz-text">
                     Wij bouwen samen met onze klanten complexe (mobiele) webapplicaties op maat met optimale gebruikersvriendelijkheid. We helpen processen van onze klanten te verbeteren, interactie met haar stakeholders eenvoudig en intuïtief te laten verlopen en/of informatie adequaat te verwerken.
@@ -53,7 +53,7 @@ nextPage:
                 <img class="media-block__image" src="/images/monsters/romemonster.svg" width="200px" height="200px"/>
             </div>
             <div class="media-block__content">
-                <h2>Als professionals</h2>
+                <h2 class="cz-no-m-b">Als professionals</h2>
                 <hr class="cz-divider" />
                 <p class="cz-text">
                     De professionals van CODEZILLA zorgen voor gestructureerd geschreven (front end) software, opdat in de toekomst andere professionals snel en adequaat kunnen verder ontwikkelen van deze software.
@@ -64,3 +64,4 @@ nextPage:
         </div>
     </div>
 </section>
+</main>
