--- a/content/index.html
+++ b/content/index.html
@@ -3,8 +3,8 @@ title: CODEZILLA
 layout: home.html
 
 nextPage:
-    title: ons team
-    url: /team
+    title: visie
+    url: /visie
 ---
 
 <section class="cz-section">
