--- a/content/team.html
+++ b/content/team.html
@@ -8,8 +8,8 @@ header:
     slogan: Always code as if the guy <br /> who ends up maintaining your code <br /> will be a violent psychopath who knows where you live.
 
 nextPage:
-    title: onze visie
-    url: /visie
+    title: home
+    url: /
 ---
 
 <div class="cz-split-panels">
