--- a/content/visie.html
+++ b/content/visie.html
@@ -8,8 +8,8 @@ header:
     slogan: Always code as if the guy <br /> who ends up maintaining your code <br /> will be a violent psychopath who knows where you live.
 
 nextPage:
-    title: onze visie
-    url: /visie
+    title: werken bij
+    url: /werken-bij
 ---
 
 <main class="cz-p-y">
@@ -17,7 +17,7 @@ nextPage:
         <div class="container">
             <div class="media-block">
                 <div class="media-block__image-wrapper">
-                    <img class="media-block__image" src="/images/monsters/nicomonster.svg" width="200px" height="200px"/>
+                    {{> diamond-icon svg="/images/crosshair.svg" inlineStyle="width: 60px; margin-left:-30px; margin-top: -30px" }}
                 </div>
 
                 <div class="media-block__content">
@@ -43,7 +43,7 @@ nextPage:
                     </p>
                 </div>
                 <div class="media-block__image-wrapper">
-                    <img class="media-block__image" src="/images/monsters/nicomonster.svg" width="200px" height="200px"/>
+                    {{> diamond-icon svg="/images/graduation-hat.svg" inlineStyle="width: 70px; margin-left:-35px; margin-top: -20px" }}
                 </div>
             </div>
         </div>
@@ -53,7 +53,7 @@ nextPage:
         <div class="container">
             <div class="media-block">
                 <div class="media-block__image-wrapper">
-                    <img class="media-block__image" src="/images/monsters/nicomonster.svg" width="200px" height="200px"/>
+                    {{> diamond-icon svg="/images/fist.svg" inlineStyle="width: 50px; margin-left:-25px; margin-top: -25px" }}
                 </div>
                 <div class="media-block__content">
                     <h2>Team</h2>
