more monsters gek

--- a/content/werken-bij.html
+++ b/content/werken-bij.html
@@ -18,7 +18,7 @@ nextPage:
     <div class="container">
         <div class="media-block">
             <div class="media-block__image-wrapper">
-                {{> team-member name="Jouw avatar?" svg="/images/monsters/remymonster.svg" }}
+                {{> team-member name="Jouw avatar?" svg="/images/monsters/anonymousmonster.svg" svgStyle="transform: scale(0.7) translateY(-80px)" }}
             </div>
 
             <div class="media-block__content">
