--- a/content/team.html
+++ b/content/team.html
@@ -26,7 +26,7 @@ nextPage:
                     {{> team-member name="rory" displayName="Rory" svg="/images/monsters/rorymonster.svg" }}
                 </div>
                 <div class="cz-diamond-grid__block">
-                    {{> team-member name="jellebrouwer" displayName="Jelle" svg="/images/monsters/jellebrouwermonster.svg" }}
+                    {{> team-member name="jellebrouwer" displayName="Jelle" svg="/images/monsters/jellebmonster.svg" }}
                 </div>
                 <div class="cz-diamond-grid__block">
                     {{> team-member name="jelle" displayName="Jelle" svg="/images/monsters/jellemonster.svg" }}
@@ -53,7 +53,7 @@ nextPage:
                     {{> team-member name="ming" displayName="Ming" svg="/images/monsters/mingmonster.svg" }}
                 </div>
                 <div class="cz-diamond-grid__block">
-                    {{> team-member name="tjin" displayName="Tjin" vg="/images/monsters/tjinmonster.svg" }}
+                    {{> team-member name="tjin" displayName="Tjin" svg="/images/monsters/tjinmonster.svg" }}
                 </div>
                 <div class="cz-diamond-grid__block">
                     {{> team-member name="jeroen" displayName="Jeroen" svg="/images/monsters/jeroenmonster.svg" }}
@@ -62,7 +62,7 @@ nextPage:
                     {{> team-member name="bas" displayName="Bas" svg="/images/monsters/basmonster.svg" }}
                 </div>
                 <div class="cz-diamond-grid__block">
-                    {{> team-member name="joran" displayName="Joran" svg="/images/monsters/joranmonster.svg" }}
+                    {{> team-member name="joran" displayName="Joran" svg="/images/monsters/joranmonster.svg" svgStyle="transform: scale(0.7) translateY(-80px)" }}
                 </div>
             </div>
         </div>
@@ -95,7 +95,7 @@ nextPage:
         {{/inline}}
     {{/team-member-overlay}}
 
-    {{#> team-member-overlay name="jellebrouwer" displayName="Jelle" quote="Love to turn innovative ideas into unbelievable user experiences" svg="/images/monsters/jellebrouwermonster.svg"}}
+    {{#> team-member-overlay name="jellebrouwer" displayName="Jelle" quote="Love to turn innovative ideas into unbelievable user experiences" svg="/images/monsters/jellebmonster.svg"}}
         {{#*inline "likes"}}
             Sports, travelling, food and creative entrepreneurship
         {{/inline}}
@@ -122,7 +122,7 @@ nextPage:
         {{/inline}}
     {{/team-member-overlay}}
 
-    {{#> team-member-overlay name="michel" displayName="Michel" quote="To much Javascript. I'll fix it with css.." svg="/images/monsters/michelmonster.svg"}}
+    {{#> team-member-overlay name="michel" displayName="Michel" quote="Too much Javascript. I'll fix it with css.." svg="/images/monsters/michelmonster.svg"}}
         {{#*inline "likes"}}
             Hardware and Software tweaking. Watching movies, traveling and cars
         {{/inline}}
@@ -158,7 +158,7 @@ nextPage:
         {{/inline}}
     {{/team-member-overlay}}
 
-    {{#> team-member-overlay name="patrick" displayName="Patrick" quote="Always code as if the guy who ends up maintaining your code will be a violent psychopath who knows where you live." svg="/images/monsters/patrickmonster.svg"}}
+    {{#> team-member-overlay name="patrick" displayName="Patrick" quote="" svg="/images/monsters/patrickmonster.svg"}}
         {{#*inline "likes"}}
             Shaolin Kempo, (Retro) Video Games, Open Source Software
         {{/inline}}
