--- a/content/team.html
+++ b/content/team.html
@@ -176,9 +176,9 @@ nextPage:
         {{/inline}}
     {{/team-member-overlay}}
     
-    {{#> team-member-overlay name="ming" displayName="Jeroen" quote="What could possibly go wrong?" svg="/images/monsters/jeroenmonster.svg"}}
+    {{#> team-member-overlay name="jeroen" displayName="Jeroen" quote="What could possibly go wrong?" svg="/images/monsters/jeroenmonster.svg"}}
         {{#*inline "likes"}}
-            
+            Cars, cars, cars
         {{/inline}}
         {{#*inline "writesCodeFor"}}
             <p><strong>SNS Bank</strong></p>
