--- a/content/werken-bij.html
+++ b/content/werken-bij.html
@@ -5,7 +5,7 @@ layout: layout.html
 header:
     image: http://lorempixel.com/1200/1920/technics/3
     title: Werken bij
-    slogan: Always code as if the guy <br /> who ends up maintaining your code <br /> will be a violent psychopath who knows where you live.
+    slogan: Wij zijn op zoek naar gepassioneerde front-end developers.
 
 nextPage:
     title: team
@@ -18,7 +18,7 @@ nextPage:
     <div class="container">
         <div class="media-block">
             <div class="media-block__image-wrapper">
-                {{> team-member name="Jouw avatar?" svg="/images/monsters/anonymousmonster.svg" svgStyle="transform: scale(0.7) translateY(-80px)" }}
+                {{> team-member name="jouw-avatar" displayName="Jij hier?" svg="/images/monsters/anonymousmonster.svg" svgStyle="transform: scale(0.5) translateY(-120px)" }}
             </div>
 
             <div class="media-block__content">
