--- a/content/visie.html
+++ b/content/visie.html
@@ -5,7 +5,7 @@ layout: layout.html
 header:
     image: http://lorempixel.com/1200/1920/technics/3
     title: Visie
-    slogan: Always code as if the guy <br /> who ends up maintaining your code <br /> will be a violent psychopath who knows where you live.
+    slogan: '"Wij zijn monsterachtig <br/> goed in code"'
 
 nextPage:
     title: werken bij
