Changed some quotes, added Joran's overlay

--- a/content/team.html
+++ b/content/team.html
@@ -77,7 +77,7 @@ nextPage:
         {{/inline}}
     {{/team-member-overlay}}
 
-    {{#> team-member-overlay name="huib" displayName="Huib" quote="Hmm, that technique sounds delicious" svg="/images/monsters/huibmonster.svg"}}
+    {{#> team-member-overlay name="huib" displayName="Huib" quote="A computer program does what you tell it to do, not what you want it to do" svg="/images/monsters/huibmonster.svg"}}
         {{#*inline "likes"}}
             Tinkering, Devouring websites and traveling
         {{/inline}}
@@ -158,7 +158,7 @@ nextPage:
         {{/inline}}
     {{/team-member-overlay}}
 
-    {{#> team-member-overlay name="patrick" displayName="Patrick" quote="" svg="/images/monsters/patrickmonster.svg"}}
+    {{#> team-member-overlay name="patrick" displayName="Patrick" quote="Pasting code from the Internet into production code is like chewing gum found in the street" svg="/images/monsters/patrickmonster.svg"}}
         {{#*inline "likes"}}
             Shaolin Kempo, (Retro) Video Games, Open Source Software
         {{/inline}}
@@ -176,7 +176,7 @@ nextPage:
         {{/inline}}
     {{/team-member-overlay}}
     
-    {{#> team-member-overlay name="jeroen" displayName="Jeroen" quote="What could possibly go wrong?" svg="/images/monsters/jeroenmonster.svg"}}
+    {{#> team-member-overlay name="jeroen" displayName="Jeroen" quote="" svg="/images/monsters/jeroenmonster.svg"}}
         {{#*inline "likes"}}
             Cars, cars, cars
         {{/inline}}
@@ -197,6 +197,15 @@ nextPage:
     {{#> team-member-overlay name="bas" displayName="Bas" quote="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt mauris non imperdiet placerat." svg="/images/monsters/basmonster.svg"}}
         {{#*inline "likes"}}
             Scouting, Fitness, Movies&amp;Series
+        {{/inline}}
+        {{#*inline "writesCodeFor"}}
+            <p><strong>Rabobank</strong></p>
+        {{/inline}}
+    {{/team-member-overlay}}
+
+    {{#> team-member-overlay name="joran" displayName="Joran" quote="" svg="/images/monsters/joranmonster.svg"}}
+        {{#*inline "likes"}}
+            
         {{/inline}}
         {{#*inline "writesCodeFor"}}
             <p><strong>Rabobank</strong></p>
