Svg & tortured borders

--- a/content/index.html
+++ b/content/index.html
@@ -7,6 +7,7 @@ nextPage:
     url: /visie
 ---
 
+<div class="tortured-border-top"></div>
 <main class="cz-p-y">
     <section class="cz-section cz-m-t-3">
         <div class="container">
@@ -66,3 +67,4 @@ nextPage:
         </div>
     </section>
 </main>
+<div class="tortured-border-bottom"></div>
