--- a/content/team.html
+++ b/content/team.html
@@ -12,6 +12,8 @@ nextPage:
     url: /
 ---
 
+<div class="tortured-border-top"></div>
+<main>
 <div class="cz-split-panels">
     <div class="cz-section">
         <div class="cz-diamond-grid">
@@ -203,3 +205,5 @@ nextPage:
         {{/inline}}
     {{/team-member-overlay}}
 </div>
+</main>
+<div class="tortured-border-bottom"></div>
