--- a/content/visie.html
+++ b/content/visie.html
@@ -12,6 +12,7 @@ nextPage:
     url: /werken-bij
 ---
 
+<div class="tortured-border-top"></div>
 <main class="cz-p-y">
     <section class="cz-section  cz-m-t-3">
         <div class="container">
@@ -66,3 +67,4 @@ nextPage:
         </div>
     </section>
 </main>
+<div class="tortured-border-bottom"></div>
