--- a/content/werken-bij.html
+++ b/content/werken-bij.html
@@ -3,7 +3,7 @@ title: Projecten
 layout: layout.html
 
 header:
-    image: http://lorempixel.com/1200/1920/technics/3
+    image: /images/collage-codezilla-1.jpg
     title: Werken bij
     slogan: Wij zijn op zoek naar gepassioneerde front-end developers.
 
@@ -12,7 +12,7 @@ nextPage:
     url: /team
 ---
 
-
+<div class="tortured-border-top"></div>
 <main class="cz-p-y">
 <section class="cz-section  cz-m-t-3">
     <div class="container">
@@ -49,4 +49,5 @@ nextPage:
     </div>
 </section>
 </main>
+<div class="tortured-border-bottom"></div>
 
