feat: bedrijven-carousel

--- a/content/index.html
+++ b/content/index.html
@@ -64,3 +64,156 @@ nextPage:
         </div>
     </div>
 </section>
+
+<!-- <ul class="cz-carousel cz-list-reset">
+    <li>
+        <div class="cz-carousel__image cz-image-focus-right" style="background-image: url('{{ header.image }}')"></div>
+        <div class="cz-carousel__content">
+            <h1 class="cz-carousel__title">{{ header.title }}</h1>
+            <div class="cz-divider"></div>
+            <p class="cz-carousel__slogan">
+                {{{ header.slogan }}}
+            </p>
+        </div>
+    </li>
+</ul>
+ -->
+<section class="cz-section">
+    <div class="container">
+        <div class="media-block">
+            <div class="media-block__content">
+                <h2>Wij schrijven monsterlijk goede code voor...</h2>
+                <hr class="cz-divider" />
+            </div>
+        </div>
+        <div class="cz-bedrijven-carousel" cz-bedrijven-carousel>
+            <a class="cz-bedrijven-carousel--previous">
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="37">
+                    <path fill="#52D70B" fill-rule="evenodd" d="M24.178 18.5l.343-.343L6.844.48.48 6.842 12.135 18.5.48 30.157l6.363 6.364L24.52 18.844l-.342-.343z"/>
+                </svg>
+            </a>
+            <a class="cz-bedrijven-carousel--next">
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="37">
+                    <path fill="#52D70B" fill-rule="evenodd" d="M24.178 18.5l.343-.343L6.844.48.48 6.842 12.135 18.5.48 30.157l6.363 6.364L24.52 18.844l-.342-.343z"/>
+                </svg>
+            </a>
+            <ul>
+                <li class="media-block cz-bedrijven-carousel--item">
+                    <div class="media-block__content">
+                        <p class="cz-text">
+                            Agrifirm ontwikkelt innovatieve software applicaties (o.a. internet of things) voor de agrarische sector. CODEZILLA is betrokken bij deze projecten. We bouwen o.a. generieke componenten (library en templates) die voor nieuwe Angular2 applicaties gebruikt kunnen worden.
+                        </p>
+                    </div>
+                    <div class="media-block__image-wrapper media-block__image-wrapper--persist-mobile">
+                        <img class="media-block__image" src="/images/companies/agrifirm-o.svg" width="200px" height="200px" />
+                    </div>
+                </li>
+                <li class="media-block cz-bedrijven-carousel--item">
+                    <div class="media-block__content">
+                        <p class="cz-text">
+                            Bij Ahold-Delhaize werken we aan ah.nl website; wij richten ons op het online bestellen gedeelte voor de klant. Wij zorgen ervoor dat het bestelproces via de website eenvoudig en gebruiksvriendelijk verloopt.
+                        </p>
+                    </div>
+                    <div class="media-block__image-wrapper media-block__image-wrapper--persist-mobile">
+                        <img class="media-block__image" src="/images/companies/ahold-o.svg" width="200px" height="200px" />
+                    </div>
+                </li>
+                <li class="media-block cz-bedrijven-carousel--item">
+                    <div class="media-block__content">
+                        <p class="cz-text">
+                            Bij verschillende overheidsinstanties werken we mee om mooie gebruikerservaringen te creëren en bedenken we innovatieve oplossingen waarbij eenvoudige interfaces prefereren.
+                        </p>
+                    </div>
+                    <div class="media-block__image-wrapper media-block__image-wrapper--persist-mobile">
+                        <img class="media-block__image" src="/images/companies/belastingdienst-o.svg" width="200px" height="200px" />
+                    </div>
+                </li>
+<!--                 <li class="media-block cz-bedrijven-carousel--item">
+                    <div class="media-block__content">
+                        <p class="cz-text">
+                            Bol.com
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam deserunt quasi nesciunt, reprehenderit, saepe cupiditate sequi, error esse quas incidunt, beatae placeat corporis repudiandae totam eaque provident officiis fuga blanditiis.
+                        </p>
+                    </div>
+                    <div class="media-block__image-wrapper media-block__image-wrapper--persist-mobile">
+                        <img class="media-block__image" src="/images/companies/bol-o.svg" width="200px" height="200px" />
+                    </div>
+                </li>
+ -->                <li class="media-block cz-bedrijven-carousel--item">
+                    <div class="media-block__content">
+                        <p class="cz-text">
+                            Deloitte werkt aan een Risk Management System dat door haar klanten wordt gebruikt. CODEZILLA is betrokken bij de ontwikkeling en verbetering van het ‘client’-zijde van het systeem.
+                        </p>
+                    </div>
+                    <div class="media-block__image-wrapper media-block__image-wrapper--persist-mobile">
+                        <img class="media-block__image" src="/images/companies/deloitte-o.svg" width="200px" height="200px" />
+                    </div>
+                </li>
+<!--                 <li class="media-block cz-bedrijven-carousel--item">
+                    <div class="media-block__content">
+                        <p class="cz-text">
+                            KLM
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim perspiciatis quidem ullam praesentium! Dicta eos repellendus temporibus dolorum praesentium sunt beatae dolore nemo assumenda? Perferendis quod inventore, veritatis doloribus ipsum?
+                        </p>
+                    </div>
+                    <div class="media-block__image-wrapper media-block__image-wrapper--persist-mobile">
+                        <img class="media-block__image" src="/images/companies/klm-o.svg" width="200px" height="200px" />
+                    </div>
+                </li>
+ -->                <!-- <li class="media-block cz-bedrijven-carousel--item">
+                    <div class="media-block__content">
+                        <p class="cz-text">
+                            KPN
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis sint doloribus consequuntur itaque rem rerum, vero obcaecati odit tempore facilis ipsa, odio iure aut, libero. Ullam veniam qui, sed cum.
+                        </p>
+                    </div>
+                    <div class="media-block__image-wrapper media-block__image-wrapper--persist-mobile">
+                        <img class="media-block__image" src="/images/companies/kpn-o.svg" width="200px" height="200px" />
+                    </div>
+                </li> -->
+                <!-- <li class="media-block cz-bedrijven-carousel--item">
+                    <div class="media-block__content">
+                        <p class="cz-text">
+                            NATO
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum temporibus dolorem repudiandae tempore ipsa vitae dicta, totam similique aliquid est voluptates rerum doloremque animi, vero possimus, porro ex nemo? Recusandae.
+                        </p>
+                    </div>
+                    <div class="media-block__image-wrapper media-block__image-wrapper--persist-mobile">
+                        <img class="media-block__image" src="/images/companies/nato-o.svg" width="200px" height="200px" />
+                    </div>
+                </li> -->
+                <li class="media-block cz-bedrijven-carousel--item">
+                    <div class="media-block__content">
+                        <p class="cz-text">
+                            Binnen de Self Service omgeving werken we aan de architectuur en de bouw van de Self Service omgeving voor (groot)zakelijke klanten.
+                        </p>
+                    </div>
+                    <div class="media-block__image-wrapper media-block__image-wrapper--persist-mobile">
+                        <img class="media-block__image" src="/images/companies/nuon-o.svg" width="200px" height="200px" />
+                    </div>
+                </li>
+                <li class="media-block cz-bedrijven-carousel--item">
+                    <div class="media-block__content">
+                        <p class="cz-text">
+                            Bij de Rabobank helpen we de hypotheek afdeling met het ontwikkelen van een interactieve hypotheek digital dossier. Tevens ontwikkelen we aan een generieke componenten library dat binnen de Rabobank breed wordt gezet en zorgt voor een uniforme gebruikerservaring zowel op desktops als op mobiele devices. <!-- We bouwen mede aan applicaties betreffende betalingen en transacties, gebruiker autorisaties, ideal, machtigingen, etc. We helpen mee aan het ontwikkelen en van een verbeterde webapplicatie voor de ‘Alles in één polis’. -->
+                        </p>
+                    </div>
+                    <div class="media-block__image-wrapper media-block__image-wrapper--persist-mobile">
+                        <img class="media-block__image" src="/images/companies/rabobank.png" width="200px" height="200px" />
+                    </div>
+                </li>
+<!--                 <li class="media-block cz-bedrijven-carousel--item">
+                    <div class="media-block__content">
+                        <p class="cz-text">
+                            SNS bank
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut est neque vero dolorum dicta cum recusandae, harum tenetur error, ullam ipsa laudantium delectus doloremque tempora, iusto blanditiis quos earum quasi.
+                        </p>
+                    </div>
+                    <div class="media-block__image-wrapper media-block__image-wrapper--persist-mobile">
+                        <img class="media-block__image" src="/images/companies/sns.png" width="200px" height="200px" />
+                    </div>
+                </li>
+ -->            </ul>
+        </div>
+    </div>
+</section>
