--- a/content/visie.html
+++ b/content/visie.html
@@ -3,7 +3,7 @@ title: Projecten
 layout: layout.html
 
 header:
-    image: http://lorempixel.com/1200/1920/technics/3
+    image: /images/header-image-visie.jpg
     title: Visie
     slogan: '"Wij zijn monsterachtig <br/> goed in code"'
 
