--- a/content/team.html
+++ b/content/team.html
@@ -3,9 +3,9 @@ title: Ons team
 layout: layout.html
 
 header:
-    image: http://lorempixel.com/1200/1920/technics/4
+    image: /images/header-image-team.jpg
     title: Het team
-    slogan: Always code as if the guy <br /> who ends up maintaining your code <br /> will be a violent psychopath who knows where you live.
+    slogan: We hebben passie voor code en zijn meer dan alleen werken
 
 nextPage:
     title: home
